[metadata]
name = PyChess
version = attr: 0.01
url = https://github.com/Kashu7100/PyChess
author = Kashu
author_email = echo_six0566@yahoo.co.jp
license = file: LICENSE.md
description = PyChess is a pure Python chess library with move generation and move validation as well as GUI. 
long_description = file: README.md

[options]
python_requires = >=3.4
install_requires =
  numpy
